force-app/main/default/objects/Brand_Permission__c/Brand_Permission__c.object-meta.xml
<CustomObject>
    <label>Brand Permission</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Brand Permissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Permissions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>