force-app/main/default/objects/Brand_Permission__c/fields/Active_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_From_Date__c</fullName>
    <defaultValue>DATE( YEAR(today()) ,01,01)</defaultValue>
    <label>Active From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>