force-app/main/default/objects/Brand_Permission__c/fields/Active_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_To_Date__c</fullName>
    <defaultValue>DATE( YEAR(today()) ,12,31)</defaultValue>
    <label>Active To Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>