force-app/main/default/objects/Brand_Permission__c/fields/Adhoc_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Permissions__c</fullName>
    <inlineHelpText>Please list any adhoc permissions that were obtained specifically for a campaign or activity. This is not to be filled in for Group or Lease permissions</inlineHelpText>
    <label>Adhoc Permissions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>