force-app/main/default/objects/Brand_Permission__c/fields/B2B_Selling_Tools__c.field-meta.xml
<CustomField>
    <fullName>B2B_Selling_Tools__c</fullName>
    <inlineHelpText>to travel trade partners - brand name/logo/product imagery/price* featured</inlineHelpText>
    <label>B2B Selling Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>