force-app/main/default/objects/Brand_Permission__c/fields/Broadcast_Advertising_Film_TV__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Advertising_Film_TV__c</fullName>
    <inlineHelpText>brand name/logo/blade sign/shopping bag/boutique interior/boutique exterior/product imagery* featured</inlineHelpText>
    <label>Broadcast Advertising (Film/ TV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>