force-app/main/default/objects/Brand_Permission__c/fields/Content_Editorial__c.field-meta.xml
<CustomField>
    <fullName>Content_Editorial__c</fullName>
    <inlineHelpText>Content/editorial - can you share brand information, product stories, craftsmanship, heritage, individual style and personalisation etc.?</inlineHelpText>
    <label>Content/Editorial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>