force-app/main/default/objects/Brand_Permission__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
                <label>GBP - British Pound</label>
            </value>
            <value>
                <fullName>EUR</fullName>
                <label>EUR - Euro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>