force-app/main/default/objects/Brand_Permission__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <formula>IF( RecordType.Name = &quot;Group-led Annual&quot; ,IMAGE(&quot;/img/icon/custom51_100/globe32.png&quot; , &quot;Group-led Annual&quot;) ,    
IF( RecordType.Name = &quot;Lease-led Annual&quot; ,IMAGE(&quot;/img/icon/custom51_100/keys32.png&quot;  , &quot;Lease-led Annual&quot;) ,    
IF( RecordType.Name = &quot;Ad-hoc&quot; ,IMAGE(&quot;/img/icon/custom51_100/gears32.png&quot;   , &quot;Ad-hoc&quot;) ,    
&quot;Unknown&quot;
)
)
)

/*http://blogforce9dev-developer-edition.ap1.force.com/salesforceicons*/</formula>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>