force-app/main/default/objects/Brand_Permission__c/fields/Influencer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Activity__c</fullName>
    <inlineHelpText>allow influencer to pull product/photograph blade sign/photograph shopping bag/photograph product/photograph inside and outside of boutique*</inlineHelpText>
    <label>Influencer Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>