force-app/main/default/objects/Brand_Permission__c/fields/Influencer_Village_Activity__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Village_Activity__c</fullName>
    <inlineHelpText>allow above assets and brand name to be shared on all Village channels - website/email/social*</inlineHelpText>
    <label>Influencer Village Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>