force-app/main/default/objects/Brand_Permission__c/fields/Internal_VR__c.field-meta.xml
<CustomField>
    <fullName>Internal_VR__c</fullName>
    <inlineHelpText>(presentations, videos, campaign results) - brand name/logo/product imagery/campaign imagery/results from marketing activity* featured</inlineHelpText>
    <label>Internal VR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>