force-app/main/default/objects/Brand_Permission__c/fields/International_social_media_platforms__c.field-meta.xml
<CustomField>
    <fullName>International_social_media_platforms__c</fullName>
    <inlineHelpText>brand name/product imagery/price/outside and inside of boutique* featured on WeChat &amp; Weibo, Middle Eastern channels TBC</inlineHelpText>
    <label>International social media platforms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>