force-app/main/default/objects/Brand_Permission__c/fields/Lifestyle_Imagery__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Imagery__c</fullName>
    <inlineHelpText>product images to be layered onto lifestyle/editorial images with background</inlineHelpText>
    <label>Lifestyle Imagery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>