force-app/main/default/objects/Brand_Permission__c/fields/Link_to_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Permissions__c</fullName>
    <inlineHelpText>Please select the file from SharePoint that has captured this information manually</inlineHelpText>
    <label>Link to Permissions</label>
    <type>Url</type>
</CustomField>