force-app/main/default/objects/Brand_Permission__c/fields/MICE__c.field-meta.xml
<CustomField>
    <fullName>MICE__c</fullName>
    <inlineHelpText>brand name/logo/retail offer* featured in all Villages&apos; MICE programme with offer on in Village collateral</inlineHelpText>
    <label>MICE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>