force-app/main/default/objects/Brand_Permission__c/fields/Paid_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Paid_Social_Media__c</fullName>
    <inlineHelpText>brand name/product imagery/price* included within paid social media</inlineHelpText>
    <label>Paid Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>