force-app/main/default/objects/Brand_Permission__c/fields/Participation_in_Privilege_Programme__c.field-meta.xml
<CustomField>
    <fullName>Participation_in_Privilege_Programme__c</fullName>
    <inlineHelpText>requires Coniq scanners in boutiques - Bicester Village, Las Rozas Village and La Valléé Village live. Other Villages launching Q1 -2 2017</inlineHelpText>
    <label>Participation in Privilege Programme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>