force-app/main/default/objects/Brand_Permission__c/fields/Permission_Active_Detail__c.field-meta.xml
<CustomField>
    <fullName>Permission_Active_Detail__c</fullName>
    <formula>&apos;This Brand Permission runs from &apos; &amp; 
CASE(
MONTH(Active_From_Date__c ),1,&apos;January&apos;, 
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;Septmeber&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,
NULL
)
&amp;&apos; &apos;&amp;
TEXT(Year( Active_From_Date__c )) &amp; &apos; until &apos; &amp;
CASE(
MONTH( Active_To_Date__c ),1,&apos;January&apos;, 
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;Septmeber&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,
NULL
)
&amp;&apos; &apos;&amp; 
TEXT(Year( Active_To_Date__c ))</formula>
    <label>Permission Active Detail</label>
    <type>Text</type>
</CustomField>