force-app/main/default/objects/Brand_Permission__c/fields/Permission_Caveats__c.field-meta.xml
<CustomField>
    <fullName>Permission_Caveats__c</fullName>
    <inlineHelpText>Please enter all of the exceptions where the permission is Yes or no but with stipulations for example the brand may be willing to participate but on certain channels like Facebook only</inlineHelpText>
    <label>Permission Caveats</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>