force-app/main/default/objects/Brand_Permission__c/fields/Photography__c.field-meta.xml
<CustomField>
    <fullName>Photography__c</fullName>
    <inlineHelpText>product/shopping bag/blade sign/outside/inside* boutique</inlineHelpText>
    <label>Photography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>