force-app/main/default/objects/Brand_Permission__c/fields/Post_Copy__c.field-meta.xml
<CustomField>
    <fullName>Post_Copy__c</fullName>
    <inlineHelpText>mention of brand name in post (no @ or #)</inlineHelpText>
    <label>Post Copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>