force-app/main/default/objects/Brand_Permission__c/fields/Post_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Post_Social_Media__c</fullName>
    <label>Post Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>