force-app/main/default/objects/Brand_Permission__c/fields/Press_Release__c.field-meta.xml
<CustomField>
    <fullName>Press_Release__c</fullName>
    <inlineHelpText>brand name/product imagery* featured in all markets (international and EU)</inlineHelpText>
    <label>Press Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>