force-app/main/default/objects/Brand_Permission__c/fields/Printed_collateral_OUT_OF_VILLAGE__c.field-meta.xml
<CustomField>
    <fullName>Printed_collateral_OUT_OF_VILLAGE__c</fullName>
    <inlineHelpText>brand name, logo, retail offer, product imagery, price* featured</inlineHelpText>
    <label>Printed collateral - OUT-OF-VILLAGE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>