force-app/main/default/objects/Brand_Permission__c/fields/Product_Imagery__c.field-meta.xml
<CustomField>
    <fullName>Product_Imagery__c</fullName>
    <inlineHelpText>Can they send images to us?</inlineHelpText>
    <label>Product Imagery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveats</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>