force-app/main/default/objects/Brand_Permission__c/fields/Pulling_Product_to_Photograph__c.field-meta.xml
<CustomField>
    <fullName>Pulling_Product_to_Photograph__c</fullName>
    <inlineHelpText>If the brand is unwilling to send images do we have permission to pull product from all Village boutiques and photograph?</inlineHelpText>
    <label>Pulling Product to Photograph</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>