force-app/main/default/objects/Brand_Permission__c/fields/Reason_for_Removal_or_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Removal_or_Cancellation__c</fullName>
    <inlineHelpText>If this record was created in error (Removed) or if there was a plan to attain a permission but the plan was changed BEFORE the Brand was asked, please add a reason explaining what happened.</inlineHelpText>
    <label>Reason for Removal or Cancellation</label>
    <type>TextArea</type>
</CustomField>