force-app/main/default/objects/Brand_Permission__c/fields/Reason_no_Permission_Granted__c.field-meta.xml
<CustomField>
    <fullName>Reason_no_Permission_Granted__c</fullName>
    <inlineHelpText>When the status is &quot;No Permission Granted&quot; you should enter the reason why the brand choose not to allow for any permissions</inlineHelpText>
    <label>Reason no Permission Granted</label>
    <type>TextArea</type>
</CustomField>