force-app/main/default/objects/Brand_Permission__c/fields/Selling_tools_to_brands__c.field-meta.xml
<CustomField>
    <fullName>Selling_tools_to_brands__c</fullName>
    <inlineHelpText>Selling tools (to brands) - brand name/logo* featured</inlineHelpText>
    <label>Selling tools (to brands)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>