force-app/main/default/objects/Brand_Permission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>..</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Generated</fullName>
                <default>true</default>
                <label>System Generated</label>
            </value>
            <value>
                <fullName>Permissions asked</fullName>
            </value>
            <value>
                <fullName>Answer for Permissions received</fullName>
            </value>
            <value>
                <fullName>No Permissions granted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>