force-app/main/default/objects/Brand_Permission__c/fields/Tagging__c.field-meta.xml
<CustomField>
    <fullName>Tagging__c</fullName>
    <inlineHelpText>permission to @brand #brand on social channels</inlineHelpText>
    <label>Tagging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>