force-app/main/default/objects/Brand_Permission__c/fields/Tourism_Partner__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Partner__c</fullName>
    <inlineHelpText>brand name/product imagery/price/campaign imagery/logo* featured</inlineHelpText>
    <label>Tourism Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>