force-app/main/default/objects/Brand_Permission__c/fields/Tourism_Partner_Communications__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Partner_Communications__c</fullName>
    <inlineHelpText>communicated through: email, mobile (SMS), website, third-party website, social, in-Village collateral, external collateral*</inlineHelpText>
    <label>Tourism Partner Communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>