force-app/main/default/objects/Brand_Permission__c/fields/User_Generated_Content_Olapic_tool__c.field-meta.xml
<CustomField>
    <fullName>User_Generated_Content_Olapic_tool__c</fullName>
    <inlineHelpText>permission for brand&apos;s product to be featured through tool on Village websites</inlineHelpText>
    <label>User Generated Content &apos;Olapic&apos; tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>