force-app/main/default/objects/Brand_Permission__c/fields/Video_Content__c.field-meta.xml
<CustomField>
    <fullName>Video_Content__c</fullName>
    <inlineHelpText>Can they send videos to us?</inlineHelpText>
    <label>Video Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>