force-app/main/default/objects/Brand_Permission__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is lease-led or Adhoc, please enter the specific Village this permission applies to</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Brand Permissions</relationshipLabel>
    <relationshipName>Brand_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>