force-app/main/default/objects/Brand_Permission__c/fields/Village_Advertising_Space__c.field-meta.xml
<CustomField>
    <fullName>Village_Advertising_Space__c</fullName>
    <inlineHelpText>e.g. a-boards, display screens in-Village, Shopping Express, Tourist information centres - brand name/product imagery/product* featured</inlineHelpText>
    <label>Village Advertising Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>