force-app/main/default/objects/Brand_Permission__c/fields/Village_Apps__c.field-meta.xml
<CustomField>
    <fullName>Village_Apps__c</fullName>
    <inlineHelpText>Brand name/product imagery/price/campaign imagery/logos/editorial content*displayed across all Villages (where brand has boutiques)</inlineHelpText>
    <label>Village Apps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>