force-app/main/default/objects/Brand_Permission__c/fields/Village_Emails__c.field-meta.xml
<CustomField>
    <fullName>Village_Emails__c</fullName>
    <inlineHelpText>brand name/product imagery/price/campaign imagery* included</inlineHelpText>
    <label>Village Emails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>