force-app/main/default/objects/Brand_Permission__c/fields/Village_Event__c.field-meta.xml
<CustomField>
    <fullName>Village_Event__c</fullName>
    <inlineHelpText>brand name/logo/retail offer* featured</inlineHelpText>
    <label>Village Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>