force-app/main/default/objects/Brand_Permission__c/fields/Village_Event_Communication__c.field-meta.xml
<CustomField>
    <fullName>Village_Event_Communication__c</fullName>
    <inlineHelpText>communicated through: email, mobile (SMS), website, third-party webiste, social, in-Village collateral, external collateral*</inlineHelpText>
    <label>Village Event Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>